--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,13 @@ branches:
   only:
     master
 
-before_install:
-  - travis_retry composer self-update
-
 install:
   - phpenv rehash
   - travis_retry composer install --no-interaction --prefer-source
 
 stages:
   - test
+  - style check
   - phpstan analysis
   - test with coverage
 
@@ -37,6 +35,11 @@ jobs:
   allow_failures:
     - php: nightly
   include:
+    - stage: style check
+      php: 7.1
+      env: TMPDIR=/tmp USE_XDEBUG=false
+      script:
+        - composer style-check
     - stage: phpstan analysis
       php: 7.1
       env: TMPDIR=/tmp USE_XDEBUG=false
@@ -44,8 +47,14 @@ jobs:
         - composer phpstan
     - stage: test with coverage
       php: 7.1
-      env: TMPDIR=/tmp USE_XDEBUG=true
+      env: TMPDIR=/tmp USE_XDEBUG=true CC_TEST_REPORTER_ID=b2ab6481229cda30d587c3d822cf597ba58e8f9fca97f3f6eea94b467a09d225
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
       script:
         - composer test-with-coverage
       after_success:
         - bash <(curl -s https://codecov.io/bash) -f ./clover.xml
+      after_script:
+        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
