--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
+        "ext-iconv": "*",
         "php": ">=7.0.0",
         "diablomedia/zendframework1-exception": "^1.0.0",
         "diablomedia/zendframework1-config": "^1.0.0",
@@ -18,7 +19,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Zend_": "src/"
+            "Zend_Text_": "src/"
         }
     },
     "autoload-dev": {
@@ -28,7 +29,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
-        "phpstan/phpstan": "^0.9.2"
+        "phpstan/phpstan": "^0.9.2",
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "maglnet/composer-require-checker": "^0.1.6 | ^0.2.1",
+        "phpro/grumphp": "^0.14.0"
     },
     "include-path": [
         "src/"
@@ -37,8 +41,12 @@
         "exclude": ["/tests"]
     },
     "scripts": {
-        "test": "phpunit ./tests",
-        "test-with-coverage": "phpunit --coverage-clover=clover.xml ./tests",
-        "phpstan": "phpstan analyze -l7 -c phpstan.neon --no-progress ./src --ansi"
+        "test": "phpunit",
+        "test-with-coverage": "phpunit --coverage-clover=clover.xml",
+        "phpstan": "phpstan analyze -l7 -c phpstan.neon --no-progress ./ --ansi",
+        "style-check": "php-cs-fixer fix --dry-run -vv"
+    },
+    "suggest": {
+        "ext-ctype": "Used by the Figlet component"
     }
 }
