--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,7 @@
 parameters:
+    excludes_analyse:
+        - %rootDir%/../../../vendor/*
+        - %rootDir%/../../../tests/*
     ignoreErrors:
         - '#Casting to .+ something that.s already .+\.#'
         - '#Variable \$padMode might not be defined\.#'
