--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,6 @@
 parameters:
-    level: 7
+    checkMissingIterableValueType: false
+    level: 8
     paths:
         - ./
     excludes_analyse:
@@ -8,7 +9,7 @@ parameters:
     ignoreErrors:
         - '#Variable \$padMode might not be defined\.#'
         # Defensive coding
-        - 
+        -
             message: '#Strict comparison using === between true and false will always evaluate to false\.#'
             path: %currentWorkingDirectory%/src/Zend/Text/Table/Column.php
         -
@@ -20,3 +21,6 @@ parameters:
         -
             message: '#Result of && is always false\.#'
             path: %currentWorkingDirectory%/src/Zend/Text/Table.php
+        -
+            message: '#Offset int does not exist on array\|null\.#'
+            path: './src/Zend/Text/Figlet.php'
