--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "prefer-stable": true,
     "require": {
         "ext-iconv": "*",
-        "php": ">=7.0.0",
+        "php": "^7.0 || ^8.0",
         "diablomedia/zendframework1-exception": "^1.0.0",
         "diablomedia/zendframework1-config": "^1.0.0 || ^2.0.0",
         "diablomedia/zendframework1-loader": "^1.0.0"
@@ -28,17 +28,19 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "phpstan/phpstan": "0.12.50",
-        "friendsofphp/php-cs-fixer": "2.16.4",
-        "maglnet/composer-require-checker": "^1.1.0 || ^2.0.0",
-        "phpro/grumphp": "^0.16.0"
+        "phpunit/phpunit": "^8.0",
+        "phpstan/phpstan": "0.12.81",
+        "friendsofphp/php-cs-fixer": "2.18.3",
+        "maglnet/composer-require-checker": "^1.1 || ^2.0 || ^3.0",
+        "phpro/grumphp-shim": "^0.22.0 || ^1.1"
     },
     "include-path": [
         "src/"
     ],
     "archive": {
-        "exclude": ["/tests"]
+        "exclude": [
+            "/tests"
+        ]
     },
     "scripts": {
         "test": "phpunit",
