FraGoTe Composer Package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "diablomedia/zendframework1-text",
+    "name": "fragotesac/zf1-text",
     "description": "Zend Framework 1 Text component",
     "type": "library",
     "keywords": [
